Player can now seamlessly move between rails

--- a/CS-179N-Project-Videogame/index.html
+++ b/CS-179N-Project-Videogame/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>CircuitJump Prototype</title>
 	<script type="text/javascript" src="p5.min.js"></script>
-	<script type="text/javascript" src="main3.js"></script>
+	<script type="text/javascript" src="main.js"></script>
 </head>
 <body>
 
