--- a/CS-179N-Project-Videogame/index.html
+++ b/CS-179N-Project-Videogame/index.html
@@ -4,6 +4,11 @@
 	<meta charset="utf-8">
 	<title>CircuitJump Prototype</title>
 	<script type="text/javascript" src="p5.min.js"></script>
+	<script type="text/javascript" src="Player.js"></script>
+	<script type="text/javascript" src="Rail.js"></script>
+	<script type="text/javascript" src="RailManager.js"></script>
+	<script type="text/javascript" src="Gate.js"></script>
+	<script type="text/javascript" src="GameManager.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 </head>
 <body>
