--- a/CS-179N-Project-Videogame/index.html
+++ b/CS-179N-Project-Videogame/index.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="Rail.js"></script>
 	<script type="text/javascript" src="RailManager.js"></script>
 	<script type="text/javascript" src="Gate.js"></script>
-	<script type="text/javascript" src="GameManager.js"></script>
+	<script type="text/javascript" src="GateManager.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 </head>
 <body>
