added UI tools to create/move game objects

--- a/CS-179N-Project-Videogame/index.html
+++ b/CS-179N-Project-Videogame/index.html
@@ -12,6 +12,10 @@
 	<script type="text/javascript" src="main.js"></script>
 </head>
 <body>
+	<button id="button_create_rail" onclick="mouseMode='CREATE_RAIL';">Create Rail</button>
+	<button id="button_create_and_gate" onclick="mouseMode='CREATE_GATE'; gateType='AND';">Create AND Gate</button>
+	<button id="button_create_or_gate" onclick="mouseMode='CREATE_GATE'; gateType='OR';">Create OR Gate</button>
 
+	<button id="button_move" onclick="mouseMode='MOVE';">Move</button>
 </body>
 </html>
